# Process

./: CMakeLists.txt  README.md
HomeWork1/: CMakeLists.txt  README.md
HomeWork1/tests/: main.cpp
Log/: CMakeLists.txt
Log/LogLib/: CMakeLists.txt
Log/LogLib/include/: BaseLogger.h  Level.h  StderrLogger.h  StdoutLogger.h
Log/LogLib/src/: StderrLogger.cpp  StdoutLogger.cpp
Log/tests/: main.cpp
LogLib/: CMakeLists.txt
LogLib/include/: BaseLogger.h  FileLogger.h  Level.h  StderrLogger.h  StdoutLogger.h
LogLib/src/: BaseLogger.cpp  FileLogger.cpp  StderrLogger.cpp  StdoutLogger.cpp
include/: ExceptionProcess.h  Process.h
lib/: Process.cpp
tests/: echo.cpp  main.cpp
